--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
 </body>
 
-
-List
 <ul>
     <li><a href="media/AT Logo.png/AT Logo.png">My LOGO</a></li>
     <li><a href="http://google.com" target="blank"> go to google</a></li>
@@ -25,7 +23,7 @@ List
 
 <p>Dont you worry my brother i got this.</p>
 
-
+<!--comment this and comment that -->
 
 
 </html>
