--- a/about_me.html
+++ b/about_me.html
@@ -43,7 +43,7 @@
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="www.google.com">Google</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="http://boristulukin.com">About</a></li>
     </ul>
 
     <div style="margin-left:25%;padding:1px 16px;height:1000px;">
