--- a/index_two.html
+++ b/index_two.html
@@ -20,7 +20,7 @@
     <aside></aside>
 
     <footer></footer>
-    <div></div>
+    <div>this is a test</div>
     <div></div>
     <div></div>
     <img src="media/my pic.jpeg/horsecaridge.jpeg" class="mylogo1">
@@ -30,7 +30,7 @@
         <source src="~/Desktop/IMG_1850-1.mov" type="video/mov">
     </video>
 
-
+    <video src=""></video>
 
 </body>
 
