--- a/border-radius/index.html
+++ b/border-radius/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-
-    <h1>Building a Basic WebPage:</h1>
+    <div>
+        <h1>Building my first website</h1>
+    </div>
     <div>
         <p>no padding</p>
     </div>
