--- a/second_page.html
+++ b/second_page.html
@@ -13,13 +13,13 @@
 
     <img src="./media/AT Logo.png/surfer2.jpeg" alt="surfer">
 
-    <h1>Header 001</h1>
+    <H1 id="primary">header 001</H1>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta harum repellat veniam sint cumque similique dolorum quod sunt itaque temporibus, numquam, recusandae molestias, error ab perspiciatis necessitatibus vero deserunt. Aut!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime incidunt dicta porro nulla voluptas quaerat suscipit voluptatum! Voluptas corrupti nobis dolor quia quae consequuntur. Exercitationem veritatis sed sint perferendis et.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat non tempore architecto velit a, optio hic quibusdam mollitia dolore officiis nesciunt impedit? Odit aliquid distinctio quibusdam sunt, doloribus eaque iusto.</p>
 
-    <h1>Header 002</h1>
+    <h1 id="secondary">Header 002</h1>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta harum repellat veniam sint cumque similique dolorum quod sunt itaque temporibus, numquam, recusandae molestias, error ab perspiciatis necessitatibus vero deserunt. Aut!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime incidunt dicta porro nulla voluptas quaerat suscipit voluptatum! Voluptas corrupti nobis dolor quia quae consequuntur. Exercitationem veritatis sed sint perferendis et.</p>
