--- a/second_page.html
+++ b/second_page.html
@@ -11,7 +11,12 @@
 
 <body>
 
-    <img src="./media/AT Logo.png/surfer2.jpeg" alt="surfer">
+    <div>
+
+        <img src="./media/AT Logo.png/surfer2.jpeg" alt="surfer">
+        <a href=""></a>
+        <a href=""></a>
+    </div>
 
     <h1 id="primary">header 001</h1>
 
